ec2+sg+pem/main.tf
resource "tls_private_key" "ec2_key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "aws_key_pair" "ec2_key" {
  key_name   = var.key_name
  public_key = tls_private_key.ec2_key.public_key_openssh

  tags = merge(local.common_tags, {
    Name = var.key_name
  })
}


# 3. Save the .pem file locally
resource "local_file" "private_key_pem" {
  content         = tls_private_key.ec2_key.private_key_pem
  filename        = "${path.module}/${var.key_name}.pem"
  file_permission = "0400" # owner read-only — required by SSH
}

# 4. Security Group (SSH only, default VPC)
resource "aws_security_group" "ec2_sg" {
  name        = "${var.instance_name}-sg"
  description = "Allow SSH access from my IP"
  vpc_id      = data.aws_vpc.default.id

  # Inbound: SSH from your IP only
  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }
    ingress {
    description = "HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound: allow all
  egress {
    description = "Allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.common_tags, {
    Name = "${var.instance_name}-sg"
  })
}

# ──────────────────────────────────────────
# 5. EC2 Instance
# ──────────────────────────────────────────
resource "aws_instance" "ec2" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  key_name                    = aws_key_pair.ec2_key.key_name
  subnet_id                   = tolist(data.aws_subnets.default.ids)[0]
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true
  user_data = templatefile("${path.module}/user_data.sh", {
    instance_name = var.instance_name
    environment   = var.environment
    project       = var.project
  })
  tags = merge(local.common_tags, {
    Name = var.instance_name
  })
}

resource "aws_instance" "ec2-1" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  key_name                    = aws_key_pair.ec2_key.key_name
  subnet_id                   = tolist(data.aws_subnets.default.ids)[0]
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true
  user_data = templatefile("${path.module}/user_data.sh", {
    instance_name = var.instance_name
    environment   = var.environment
    project       = var.project
  })
  tags = merge(local.common_tags, {
    Name = var.instance_name
  })
}
